[metadata]
name = ironic-ns-proxy
summary = A TCP and UDP proxy service to allow communication between the Ironic conductor service and Baremetal nodes inside isolated Neutron networks
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    ironic_ns_proxy

[entry_points]
console_scripts = 
  ironic-conductor-ns-proxy = ironic_ns_proxy.conductor_proxy:main
  ironic-conductor-ns-proxy-agent = ironic_ns_proxy.conductor_proxy_agent:main
  ironic-tftp-ns-proxy = ironic_ns_proxy.tftp_proxy:main
  ironic-tftp-ns-proxy-agent = ironic_ns_proxy.tftp_proxy_agent:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ironic_ns_proxy/locale
domain = ironic_ns_proxy

[update_catalog]
domain = ironic_ns_proxy
output_dir = ironic_ns_proxy/locale
input_file = ironic_ns_proxy/locale/ironic_ns_proxy.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ironic_ns_proxy/locale/ironic_ns_proxy.pot
